using collect to modify the list